Made the website more viewable on different devices, so the layout changes depending on what device you're on. Also added scaling to the images on hover.

--- a/index.html
+++ b/index.html
@@ -30,15 +30,23 @@
                 </article>
             </section>
             <section class="section2 three-columns">
-                <article style="background-color: rgb(255, 159, 127);">
+                <article style="border-radius: 50px;">
                     <img src="hairsalonpics/hairpic.jpg" class="center-image">
-                    <p>Transform your look - Hair cuts, styles and colors for a new you.</p>
+                    <div class="article-div"> 
+                        <p>Hair cuts, styles and colors for a new you.</p>
+                    </div>   
                 </article>
-                <article style="background-color: rgb(255, 159, 127);">
+                <article style="border-radius: 50px;">
                     <img src="hairsalonpics/nailspic.jpg" class="center-image">
+                    <div class="article-div"> 
+                        <p>Polished to perfection, styled to impress.</p>
+                    </div>   
                 </article>
-                <article style="background-color: rgb(255, 159, 127);">
+                <article style="border-radius: 50px;">
                     <img src="hairsalonpics/makeuppic.jpg" class="center-image">
+                    <div class="article-div"> 
+                        <p>Glamour is a choice, but is a brush stroke away.</p>
+                    </div>   
                 </article>
             </section>
         </main>
