Added more media queries and fixed some bugs

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <main>
             <section class="section1 full-width">
                 <article class="first-article">
-                    <p class="type-animation">Cut, Style, Color, Perfect - We'll make you look your best.</p>
+                    <p id="first-row-text"class="type-animation">Cut, Style, Color, Perfect - We'll make you look your best.</p>
                 </article>
             </section>
             <section class="section2 three-columns">
