Finished the main page. May add more stuff later

--- a/index.html
+++ b/index.html
@@ -50,9 +50,15 @@
                 </article>
             </section>
         </main>
+
         <footer>
-            <div>First Column</div>
-            <div>Second Column</div>
+            <div class="footer-section1">
+                <img class="footer-logo-img1" src="hairlogos/Artboard 1.png">
+                <img class="footer-logo-img2" src="hairlogos/Artboard 22.png">
+            </div>
+            <div class="footer-section2">
+                <p>&copy; 2023 Hair Day: All Rights Reserved </p>
+            </div>
         </footer>
     </body>
 </html>
