--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
         <nav>
             <ul>
                 <button onclick="window.location.href='index.html'"class="nav-button">Home</button>
-                <button class="nav-button">About</button>
+                <button onclick="window.location.href='about.html'"class="nav-button">About</button>
                 <button class="nav-button">Locations</button>
                 <button class="nav-button">Contact</button>
                 <button class="nav-button">Services</button>
+                <button class="nav-button">Videos</button>
             </ul>
         </nav>
         <main>
@@ -57,7 +58,7 @@
                 <img class="footer-logo-img2" src="hairlogos/Artboard 22.png">
             </div>
             <div class="footer-section2">
-                <p>&copy; 2023 Hair Day: All Rights Reserved </p>
+                <p>&copy; 2023 Hair Day: All Rights Reserved</p>
             </div>
         </footer>
     </body>
