Finished locations.html

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <ul>
                 <button onclick="window.location.href='index.html'"class="nav-button">Home</button>
                 <button onclick="window.location.href='about.html'" class="nav-button">About</button>
-                <button class="nav-button">Locations</button>
+                <button onclick="window.location.href='locations.html'"class="nav-button">Locations</button>
                 <button class="nav-button">Contact</button>
                 <button class="nav-button">Services</button>
                 <button class="nav-button">Videos</button>
@@ -70,13 +70,12 @@
                     <img class="about-images" src="stylistpics/Ainsley.jpg">
                 </div>
             </section>
+            <section style="margin-bottom: 20px;">
                 <h1 style="margin-top: 20px; margin-bottom: 10px;">Our Makeup Arists</h1>
                 <h2>Grace</h2>
                 <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 20px">
                     <img class="about-images" src="stylistpics/Grace.jpg">
                  </div>
-            <section>
-
             </section>
         </main>
 
