--- a/locations.html
+++ b/locations.html
@@ -24,32 +24,17 @@
                 <button class="nav-button">Videos</button>
             </ul>
         </nav>
-        <main>
-            <section class="section1 full-width">
-                <article class="first-article">
-                    <p id="first-row-text"class="type-animation">Cut, Style, Color, Perfect - We'll make you look your best.</p>
-                </article>
-            </section>
-            <section class="section2 three-columns">
-                <article style="border-radius: 50px;">
-                    <img src="hairsalonpics/hairpic.jpg" class="center-image">
-                    <div class="article-div"> 
-                        <p>Hair cuts, styles and colors for a new you.</p>
-                    </div>   
-                </article>
-                <article style="border-radius: 50px;">
-                    <img src="hairsalonpics/nailspic.jpg" class="center-image">
-                    <div class="article-div"> 
-                        <p>Polished to perfection, styled to impress.</p>
-                    </div>   
-                </article>
-                <article style="border-radius: 50px;">
-                    <img src="hairsalonpics/makeuppic.jpg" class="center-image">
-                    <div class="article-div"> 
-                        <p>Glamour is a choice, but is a brush stroke away.</p>
-                    </div>   
-                </article>
-            </section>
+        <main style="margin-bottom: 150px;">
+            <h1 style="margin-top: 20px;">Our Current Locations</h1>
+            <p style="text-align: center; margin-bottom: 50px;">Currently, we only have ONE location in Madison, Wisconsin at 56 ave NW 2923. However, we are planning 
+                to open more salons in the near future at these locations:
+            </p>
+            <ul>
+                <a href="https://en.wikipedia.org/wiki/Manhattan"> <li>Manhattan, New York</li> </a>
+                <a href="https://en.wikipedia.org/wiki/Chicago"> <li>Chicago, Illinois</li> </a>
+                <a href="https://en.wikipedia.org/wiki/Las_Vegas"> <li>Las Vegas, California</li> </a>
+                <a href="https://en.wikipedia.org/wiki/Great_Falls,_Montana"> <li>Great Falls, Montana</li> </a>
+            </ul>
         </main>
 
         <footer>
