Finished the booking tab. Clients can now use the booking form to book an appointment

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <button onclick="window.location.href='index.html'"class="nav-button">Home</button>
                 <button onclick="window.location.href='about.html'"class="nav-button">About</button>
                 <button onclick="window.location.href='locations.html'"class="nav-button">Locations</button>
-                <button class="nav-button">Contact</button>
+                <button onclick="window.location.href='contactBook.html'"class="nav-button">Contact/Book</button>
                 <button class="nav-button">Services</button>
                 <button class="nav-button">Videos</button>
             </ul>
