--- a/success.html
+++ b/success.html
@@ -24,17 +24,9 @@
                 <button class="nav-button">Videos</button>
             </ul>
         </nav>
-        <main style="margin-bottom: 150px;">
-            <h1 style="margin-top: 20px;">Our Current Locations</h1>
-            <p style="text-align: center; margin-bottom: 50px;">Currently, we only have ONE location in Madison, Wisconsin at 56 ave NW 2923. However, we are planning 
-                to open more salons in the near future at these locations:
-            </p>
-            <ul>
-                <a href="https://en.wikipedia.org/wiki/Manhattan"> <li>Manhattan, New York</li> </a>
-                <a href="https://en.wikipedia.org/wiki/Chicago"> <li>Chicago, Illinois</li> </a>
-                <a href="https://en.wikipedia.org/wiki/Las_Vegas"> <li>Las Vegas, California</li> </a>
-                <a href="https://en.wikipedia.org/wiki/Great_Falls,_Montana"> <li>Great Falls, Montana</li> </a>
-            </ul>
+        <main>
+            <h1 style="margin-top: 200px;">Appointment booked! Thank you for booking!</h1>
+            <h1 style="margin-top: 50px; margin-bottom: 215px;"> Feel free to leave this page.</h1>
         </main>
 
         <footer>
