Added a few things to index.html. Added buttons and other aesthetics. Changed the color of the nav and footer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <button onclick="window.location.href='about.html'"class="nav-button">About</button>
                 <button onclick="window.location.href='locations.html'"class="nav-button">Locations</button>
                 <button onclick="window.location.href='contactBook.html'"class="nav-button">Contact/Book</button>
-                <button class="nav-button">Services</button>
                 <button class="nav-button">Videos</button>
             </ul>
         </nav>
@@ -28,6 +27,7 @@
             <section class="section1 full-width">
                 <article class="first-article">
                     <p id="first-row-text"class="type-animation">Cut, Style, Color, Perfect - We'll make you look your best.</p>
+                    <p id="second-row-text"> 30% off for bookings in the next 72 hours!</p>
                 </article>
             </section>
             <section class="section2 three-columns">
@@ -35,18 +35,21 @@
                     <img src="hairsalonpics/hairpic.jpg" class="center-image">
                     <div class="article-div"> 
                         <p>Hair cuts, styles and colors for a new you.</p>
+                        <button onclick="window.location.href='contactBook.html'" class="button-for-booking-home">Book a hair styling now!</button>
                     </div>   
                 </article>
                 <article style="border-radius: 50px;">
                     <img src="hairsalonpics/nailspic.jpg" class="center-image">
                     <div class="article-div"> 
                         <p>Polished to perfection, styled to impress.</p>
+                        <button onclick="window.location.href='contactBook.html'" class="button-for-booking-home">Book a manicure now!</button>
                     </div>   
                 </article>
                 <article style="border-radius: 50px;">
                     <img src="hairsalonpics/makeuppic.jpg" class="center-image">
                     <div class="article-div"> 
                         <p>Glamour is a choice, but is a brush stroke away.</p>
+                        <button onclick="window.location.href='contactBook.html'" class="button-for-booking-home">Book a makeover now!</button>
                     </div>   
                 </article>
             </section>
