--- a/contactBook.html
+++ b/contactBook.html
@@ -20,7 +20,7 @@
                 <button onclick="window.location.href='about.html'"class="nav-button">About</button>
                 <button onclick="window.location.href='locations.html'"class="nav-button">Locations</button>
                 <button onclick="window.location.href='contactBook.html'"class="nav-button">Contact/Book</button>
-                <button class="nav-button">Videos</button>
+                <button onclick="window.location.href='videos.html'"class="nav-button">Videos</button>
             </ul>
         </nav>
         <main style="margin-bottom: 105px;">
